fix throwback on mobile and ipad

--- a/content/assets/stylesheets/includes/index.scss
+++ b/content/assets/stylesheets/includes/index.scss
@@ -161,6 +161,12 @@ $photoslidertextsize: 50px;
 }
 
 @media only screen and (max-width: 768px) {
+  #links {
+    img {
+      width: 49%;
+      max-width: 245px;
+    }
+  }
   .videosection {
     height: 70vw;
     width: 90vw;
